--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -17,8 +17,8 @@ Revisiting, and actually working on figures
 library(pacman)
 p_load(tidyverse, terra, tidyterra, whitebox, scales, wesanderson, caret, plotly,ggnewscale, sf, rgeoboundaries, elevatr, patchwork, ggspatial)
 ```
-#Figure 1: maps and distributions of topo variables
-##Maps
+# Figure 1: maps and distributions of topo variables
+## Maps
 ```{r NH-map-HB-location}
 #make map of NH, pane to show where hubbard brook is
 usa <- rgeoboundaries::geoboundaries("USA", "adm1")
@@ -151,7 +151,6 @@ ggsave("valley.png", plot = valley_plot, limitsize = FALSE, units = "in", bg = N
 #combine 3 watershed shapes into one layer, and either label or make distinct colors
 
 ```
-
 ```{r FB-topography-map}
 #read in DEM of whole valley, 1m resolution
 dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
@@ -329,7 +328,6 @@ fb_map
 
 
 ```
-
 ```{r try-NAIP-UNFINISHED}
 #read in NAIP imagery for true color composite image
 color <- sprc(c("./HB/Original zips/m_4307102_ne_19_030_20230823.jp2",
@@ -351,7 +349,7 @@ plotRGB(naip_csf_br,
         main = "RGB image \nColdsprings fire scar")
 big_image <- merge(color)
 ```
-##Topo variables
+## Topo variables
 ```{r topo-distributions}
 #get the areas of each watershed, and the whole valley
 #delineate shed and stream using 3, 5, 10m dem, then plot distribution of elevation and TWI
@@ -456,6 +454,163 @@ ggplot(all_twi)+
 #create plots of distribution
 ```
 
+# Figure 3: Distribution of flow permanence and duration of flow
+## Flow Permanence
+```{r prepare-discharge}
+#from TestingFrameworks script
+
+#read in discharge from W3-- input to Carrie's model, discharge in L/s
+#q <- read_csv("https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.1.17&entityid=efc477b3ef1bb3dd8b9355c9115cd849")
+#write.csv(q, "HB_5minQ.csv")
+q <- read_csv("HB_5minQ.csv")
+#input discharge needs to be in mm/day?
+#reference to understand difference between daily mean and instantaneous streamflow:
+#https://hydrofunctions.readthedocs.io/en/master/notebooks/DailyMean_vs_Instant.html
+
+#creating minute column, used to filter out higher temporal resolution measurements for plotting
+data_23$mins <- minute(data_23$datetime)
+data_24$mins <- minute(data_24$datetime)
+
+#find the range of dates that I need discharge for
+start <- min(data_23$datetime)
+stop <- max(data_23$datetime)
+
+#filtering discharge down to the range of dates
+q_23 <- q %>% 
+  filter(DATETIME > start & DATETIME < stop) %>% 
+  #convert to mm/day.
+  #converting instantaneous streamflow to mm/day by taking measurement, and scaling   it up as if that was the discharge for the whole day. It is not, it is just at that   moment, but should fix any units/order of magnitude issues
+  mutate("Q_mm_day" = Discharge_ls * 0.001 * 86400 / 420000 * 1000) 
+q_23$mins <- minute(q_23$DATETIME)
+
+#removing times that are not coincident with STIC observations
+q_23_f <- filter(q_23, mins %in% c(0, 30))
+
+ggplot(q_23_f, aes(x  = DATETIME, y = Q_mm_day))+
+  geom_line()+
+  labs(title = "Discharge from W3, July to Nov 2023",
+       x = "",
+       y = "Instantaneous Q (mm/day)")+
+  theme_classic()
+
+```
+
+```{r flow-permanence-W3}
+#just summer 2023
+data_23$binary <- 1
+data_23$binary[data_23$wetdry == "dry"] <- 0
+#make binary column
+data_24$binary <- 1
+data_24$binary[data_24$wetdry == "dry"] <- 0
+
+pks_23 <- data_23 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    group_by(ID) %>% 
+    #slice_sample(prop = 0.8) %>% 
+  rename("DATETIME" = datetime) %>% 
+  #left_join(select(q_23_f, c(DATETIME, Q_mm_day)), by = "DATETIME") %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  select(ID, pk) %>% 
+  ungroup()
+#just summer 2024
+pks_24 <- data_24 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, number, lat, long, binary) %>% 
+    group_by(number) %>% 
+  rename("DATETIME" = datetime, "ID" = number) %>% 
+  #left_join(select(q_23_f, c(DATETIME, Q_mm_day)), by = "DATETIME") %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  select(ID, pk) %>% 
+  ungroup()
+
+both <- inner_join(pks_23, pks_24, by = "ID")
+ggplot()+
+  geom_point(data = both,aes(x = pk.x, y = pk.y))+
+  geom_abline(slope=1, intercept=0)
+
+#both summers
+#just rbind summers 23 and 24
+precalc_24 <- data_24 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, number, lat, long, binary) %>% 
+    group_by(number) %>% 
+  rename("DATETIME" = datetime, "ID" = number)
+  
+pks_w3 <- data_23 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "W3", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    group_by(ID) %>% 
+    #slice_sample(prop = 0.8) %>% 
+  rename("DATETIME" = datetime) %>%
+  rbind(precalc_24) %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  select(ID, pk) %>% 
+  ungroup() %>% 
+  mutate(wshed = "W3")
+```
+```{r flow-permanence-FB}
+#both summers
+#just rbind summers 23 and 24
+precalc_24 <- data_24 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "FB", mins %in% c(0, 30)) %>% 
+  select(datetime, number, lat, long, binary) %>% 
+    group_by(number) %>% 
+  rename("DATETIME" = datetime, "ID" = number)
+  
+pks_fb <- data_23 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "FB", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    group_by(ID) %>% 
+    #slice_sample(prop = 0.8) %>% 
+  rename("DATETIME" = datetime) %>%
+  rbind(precalc_24) %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  select(ID, pk) %>% 
+  ungroup() %>% 
+  mutate(wshed = "FB")
+```
+```{r flow-permanence-ZZ}
+precalc_24 <- data_24 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "ZZ", mins %in% c(0, 30)) %>% 
+  select(datetime, number, lat, long, binary) %>% 
+    group_by(number) %>% 
+  rename("DATETIME" = datetime, "ID" = number)
+  
+pks_zz <- data_23 %>% 
+    mutate(mins = minute(datetime)) %>% 
+  filter(wshed == "ZZ", mins %in% c(0, 30)) %>% 
+  select(datetime, ID, lat, long, binary) %>% 
+    group_by(ID) %>% 
+    #slice_sample(prop = 0.8) %>% 
+  rename("DATETIME" = datetime) %>%
+  rbind(precalc_24) %>% 
+  summarise(pk = sum(binary)/length(binary)) %>% 
+  select(ID, pk) %>% 
+  ungroup() %>% 
+  mutate(wshed = "ZZ")
+```
+```{r combine-boxplot}
+rbind(pks_w3, pks_fb, pks_zz) %>% 
+  ggplot(aes(x = wshed, y = pk))+
+  geom_boxplot()+
+    geom_jitter()+
+  theme_classic()
+```
+
+```{r}
+#what is the fewest number of times you would need to observe a location to determine the actual local persistency?
+#what about if you visited over a range of wetness conditions? Like every 10th quartile
+```
+
+## Average Duration of Flow
 
 
 
