--- a/figures4poster.qmd
+++ b/figures4poster.qmd
@@ -4,7 +4,7 @@ format: html
 editor_options: 
   chunk_output_type: console
 ---
-
+Water center colloquium poster figures 2024
 ```{r reading-in-STIC-obs}
 #loading packages
 library(pacman)
